--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
       ddl-auto: none
     open-in-view: false
 
+logbook:
+  include: /api/**
+  strategy: default
+
+logging:
+  level:
+    org.zalando.logbook: trace
 ---
 
 spring:
