Improve request/response logging

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
 logbook:
   include: /api/**
   strategy: default
+#  exclude:
+#    - /h2-console
+#    - /h2-console/**
 
 logging:
   level:
